--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ Pillow
 psutil
 hachoir
 tgcrypto
-pyrogram==2.0.106
+pyroblack
 motor
 https://github.com/pyrogram/pyrogram/archive/master.zip
 dnspython
